Optime: add meta:og tag to improve SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta property="og:title" content="學生計算機年會 | Students' Information Technology Conference" />
+  <meta property="og:description" content="以學生為本、由學生自發舉辦，SITCON 學生計算機年會不只是學生「學以致用、教學相長」的實際展現，更冀望所有對資訊有興趣的學生，能夠在年會裏齊聚一堂，彼此激盪、傳承、啟發。" />
+  <meta property="og:url" content="https://sitcon.org/2019" />
+  <meta property="og:image" content="" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="學生計算機年會 | Students' Information Technology Conference" />
+  <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
   <title>學生計算機年會 | Students' Information Technology Conference</title>
   <!-- Google Tag Manager -->
   <script>
