Fix: favicon link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="學生計算機年會 | Students' Information Technology Conference" />
-  <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/2019/static/favicon.ico" type="image/x-icon">
   <title>學生計算機年會 | Students' Information Technology Conference</title>
   <!-- Google Tag Manager -->
   <script>
